--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="SYLE.CSS">
+    <link rel="stylesheet" href="RESET.CSS">
 </head>
 <body>
-    <h1>ALURA BOOKS</h1>
-</body>
-</html>
+    <header> class= <cabecalho>
+    <div class="container">
+     <input type=" checkbox" id="menu" class="container__botao">
+    <label for="menu">
+    <span class="cabecalho__menu hamburger container__imagem"></span>
+</label>
+<ul> class= <lista-menu>
+<li class="lista-menu__titulo">Categoria</li>
+<li class="lista-menu__item><a href= "#"
+ class="lista-menu__link">Programação</a></li>   
+<li class="lista-menu__item><a href= "#"
+class="lista-menu__link">Front-end</a></li>
+<li class="lista-menu__item"></a href= "#"
+class= "lista-menu__link> Business</a></li>
+<li class="lista-menu__item"><a href="#
+class= lista-menu__link>Desing & UX</a><a/li>    
+
