--- a/index.html
+++ b/index.html
@@ -25,4 +25,6 @@ class="lista-menu__link">Front-end</a></li>
 class= "lista-menu__link> Business</a></li>
 <li class="lista-menu__item"><a href="#
 class= lista-menu__link>Desing & UX</a><a/li>    
-
+li class= lista-menu_item><a href="a"class= "lista-menu_çink>Design & UX</a></li>"
+<img src "img/logo.svg" alt=Logo da Alurabooks class="container_imagem">
+<div class="container">
