--- a/index.html
+++ b/index.html
@@ -28,3 +28,4 @@ class= lista-menu__link>Desing & UX</a><a/li>
 li class= lista-menu_item><a href="a"class= "lista-menu_çink>Design & UX</a></li>"
 <img src "img/logo.svg" alt=Logo da Alurabooks class="container_imagem">
 <div class="container">
+    <a href="#"><img src="img/Favoritos.svg alt= Meus Favoritos"
