--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
 </label>
 <ul> class= <lista-menu>
 <li class="lista-menu__titulo">Categoria</li>
-<li class="lista-menu__item><a href= "#"
- class="lista-menu__link">Programação</a></li>   
-<li class="lista-menu__item><a href= "#"
-class="lista-menu__link">Front-end</a></li>
-<li class="lista-menu__item"></a href= "#"
-class= "lista-menu__link> Business</a></li>
-<li class="lista-menu__item"><a href="#
-class= lista-menu__link>Desing & UX</a><a/li>    
-li class= lista-menu_item><a href="a"class= "lista-menu_çink>Design & UX</a></li>"
+<li class="lista-menu__item><a href= "#" class="lista-menu__link">Programação</a></li>   
+<li class="lista-menu__item><a href= "#" class="lista-menu__link">Front-end</a></li>
+<li class="lista-menu__item"><a href= "#" class= "lista-menu__link"> Business</a></li>
+<li class="lista-menu__item"><a href="#" class= "lista-menu__link>Desing & UX</a><a/li>    
+<li class="lista-menu_item><a href="#"class= "lista-menu_link>Design & UX</a></li>"
 <img src "img/logo.svg" alt=Logo da Alurabooks class="container_imagem">
 <div class="container">
     <a href="#"><img src="img/Favoritos.svg alt= Meus Favoritos"
+    
