--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <li class="lista-menu__item><a href= "#" class="lista-menu__link">Front-end</a></li>
 <li class="lista-menu__item"><a href= "#" class= "lista-menu__link"> Business</a></li>
 <li class="lista-menu__item"><a href="#" class= "lista-menu__link>Desing & UX</a><a/li>    
-<li class="lista-menu_item><a href="#"class= "lista-menu_link>Design & UX</a></li>"
+<li class="lista-menu_item"><a href="#"class= "lista-menu_link>Design & UX</a></li>"
 <img src "img/logo.svg" alt=Logo da Alurabooks class="container_imagem">
 <div class="container">
     <a href="#"><img src="img/Favoritos.svg alt= Meus Favoritos"
